[BISERVER-14343] - PUC tab content gets truncated upon browser resize. Fixed IE11 issues

--- a/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/crystal/globalCrystal.css
+++ b/widgets/src/main/resources/org/pentaho/gwt/widgets/themes/public/themes/crystal/globalCrystal.css
@@ -806,8 +806,10 @@ border-top: 4px solid transparent;
   position: relative;
 }
 
-.pentaho-tab-deck-panel > div {
-  height: auto !important;
+@media not screen and (-ms-high-contrast: active), not screen and (-ms-high-contrast: none) {
+  .pentaho-tab-deck-panel > div {
+    height: auto !important;
+  }
 }
 
 /* Webkit browsers only */
